--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "app"
+name = "crystal crawl dev"
 version = "0.1.0"
-description = "A Tauri App"
+description = "hashtag indie game dev"
 authors = ["you"]
 license = ""
 repository = ""
