install react-spring/web - use react-spring to animate healthbar and armor in Healthbar component - fix : fix Cargo.toml - fix : fix key issue with card effects -

--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,11 +1,11 @@
 [package]
-name = "crystal crawl dev"
+name = "crystal_crawl_dev"
 version = "0.1.0"
 description = "hashtag indie game dev"
 authors = ["you"]
 license = ""
 repository = ""
-default-run = "app"
+default-run = "crystal_crawl_dev"
 edition = "2021"
 rust-version = "1.60"
 
